--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -15,6 +15,14 @@
     .animate-fadeIn {
         animation: fadeIn 0.5s ease-out;
     }
+
+    @keyframes float {
+        0% { transform: translateY(0px); }
+        50% { transform: translateY(-10px); }
+        100% { transform: translateY(0px); }
+    }
+
+    .float { animation: float 3s ease-in-out infinite; }
 }
 
 .floating-label {
@@ -24,6 +32,26 @@
 .input-field:focus ~ .floating-label,
 .input-field:not(:placeholder-shown) ~ .floating-label {
     @apply -translate-y-5 scale-75 text-docvision bg-gray-900 px-1;
+}
+
+
+
+::-webkit-scrollbar {
+    width: 6px; 
+    height: 6px; 
+}
+
+::-webkit-scrollbar-track {
+    background: #222222;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(168, 85, 247, 0.7); 
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(168, 85, 247, 1);
 }
 
 
